--- a/cmake/buildinfo.h.in
+++ b/cmake/buildinfo.h.in
@@ -1,5 +1,15 @@
+#ifndef BUILDINFO_H
+#define BUILDINFO_H
+
+namespace mazes {
+
 struct BuildInfo {
   static inline const std::string CommitSHA = "@COMMIT_SHA@";
   static inline const std::string Timestamp = "@TIMESTAMP@";
   static inline const std::string Version = "@PROJECT_VERSION@";
 };
+
+}
+
+#endif // buildinfo.h
+
