--- a/cmake/buildinfo.h.in
+++ b/cmake/buildinfo.h.in
@@ -1,12 +1,14 @@
 #ifndef BUILDINFO_H
 #define BUILDINFO_H
 
+#include <string>
+
 namespace mazes {
 
-struct BuildInfo {
-  static inline const std::string CommitSHA = "@COMMIT_SHA@";
-  static inline const std::string Timestamp = "@TIMESTAMP@";
-  static inline const std::string Version = "@PROJECT_VERSION@";
+struct build_info {
+    static inline const std::string CommitSHA = "@COMMIT_SHA@";
+    static inline const std::string Timestamp = "@TIMESTAMP@";
+    static inline const std::string Version = "@PROJECT_VERSION@";
 };
 
 }
