--- a/examples/Simultageous/CMakeLists.txt
+++ b/examples/Simultageous/CMakeLists.txt
@@ -35,7 +35,7 @@ elseif(MAZE_BUILD_DESKTOP_EXAMPLES)
     endif()
 	if(NOT SDL3_ttf_FOUND)
         message(INFO ": Getting SDL_ttf via FetchContent")
-        fetch_git_repo(SDL https://github.com/libsdl-org/SDL_ttf.git release-2.22.0)
+        fetch_git_repo(SDL https://github.com/libsdl-org/SDL_ttf.git f20defe)
         #set_property(DIRECTORY "${CMAKE_BINARY_DIR}/_deps/sdl-src" PROPERTY EXCLUDE_FROM_ALL TRUE)
     endif()
 	if(NOT SDL3_image_FOUND)
