--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -4,7 +4,7 @@ include(BuildInfo)
 
 set(CPP_BASE64_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/../deps/cpp-base64/base64.cpp)
 
-set(MAZE_BUILDER_LIB_SOURCES
+set(MAZE_BUILDER_CORE_SRCS
     args_builder.cpp
     sidewinder.cpp
     binary_tree.cpp
@@ -26,40 +26,40 @@ if(EMSCRIPTEN)
 endif()
 
 # Setup object library
-add_library(${MAZE_BUILDER_LIB}_obj OBJECT ${MAZE_BUILDER_LIB_SOURCES} ${CPP_BASE64_SRCS})
+set(MAZE_BUILDER_LIB_OBJ ${MAZE_BUILDER_CORE_LIB}_obj)
+add_library(${MAZE_BUILDER_LIB_OBJ} OBJECT ${MAZE_BUILDER_CORE_SRCS} ${CPP_BASE64_SRCS})
+target_include_directories(${MAZE_BUILDER_LIB_OBJ} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../deps)
+target_compile_features(${MAZE_BUILDER_LIB_OBJ} PRIVATE cxx_std_17)
 
 # Generate the version info for the library
-BuildInfo(${MAZE_BUILDER_LIB}_obj)
+BuildInfo(${MAZE_BUILDER_LIB_OBJ})
 
-target_include_directories(${MAZE_BUILDER_LIB}_obj PRIVATE ${CMAKE_SOURCE_DIR}/deps)
-target_compile_features(${MAZE_BUILDER_LIB}_obj PUBLIC cxx_std_17)
-# file(GLOB MAZE_BUILDER_HEADERS ${CMAKE_SOURCE_DIR}/include/MazeBuilder/*.h)
-# target_sources(${MAZE_BUILDER_LIB}_obj PUBLIC FILE_SET HEADERS BASE_DIRS "${CMAKE_SOURCE_DIR}/include" FILES ${MAZE_BUILDER_HEADERS})
-target_include_directories(${MAZE_BUILDER_LIB}_obj PRIVATE ${CMAKE_SOURCE_DIR}/include)
-set_target_properties(${MAZE_BUILDER_LIB}_obj PROPERTIES POSITION_INDEPENDENT_CODE 1)
+file(GLOB MAZE_BUILDER_HEADERS "${CMAKE_SOURCE_DIR}/include/MazeBuilder/*.h")
+target_sources(${MAZE_BUILDER_LIB_OBJ} PUBLIC FILE_SET HEADERS BASE_DIRS "${CMAKE_SOURCE_DIR}/include" FILES ${MAZE_BUILDER_HEADERS})
+#target_include_directories(${MAZE_BUILDER_CORE_LIB}_obj PRIVATE ${CMAKE_SOURCE_DIR}/include)
+set_target_properties(${MAZE_BUILDER_LIB_OBJ} PROPERTIES POSITION_INDEPENDENT_CODE 1)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
     message(INFO ": ${CMAKE_BUILD_TYPE} - enabled ${PROJECT_NAME} to use -DMAZE_DEBUG flag.")
-    target_compile_definitions(${MAZE_BUILDER_LIB}_obj PRIVATE "MAZE_DEBUG")
+    target_compile_definitions(${MAZE_BUILDER_LIB_OBJ} PRIVATE "MAZE_DEBUG")
 endif()
 
-# Setup shared library
-add_library(${MAZE_BUILDER_LIB}_shared SHARED)
-target_link_libraries(${MAZE_BUILDER_LIB}_shared ${MAZE_BUILDER_LIB}_obj)
-
-# Setup static library
-add_library(${MAZE_BUILDER_LIB}_static STATIC)
-target_link_libraries(${MAZE_BUILDER_LIB}_static ${MAZE_BUILDER_LIB}_obj)
+# Shared build
+add_library(${MAZE_BUILDER_CORE_LIB}_shared SHARED)
+target_link_libraries(${MAZE_BUILDER_CORE_LIB}_shared ${MAZE_BUILDER_LIB_OBJ})
+# Static build
+add_library(${MAZE_BUILDER_CORE_LIB}_static STATIC)
+target_link_libraries(${MAZE_BUILDER_CORE_LIB}_static ${MAZE_BUILDER_LIB_OBJ})
 
 #Doxygen(maze_builder sources)
 
 # Installation
 include(GNUInstallDirs)
-install(TARGETS ${MAZE_BUILDER_LIB}_obj ${MAZE_BUILDER_LIB}_shared ${MAZE_BUILDER_LIB}_static
+install(TARGETS ${MAZE_BUILDER_LIB_OBJ} ${MAZE_BUILDER_CORE_LIB}_shared ${MAZE_BUILDER_CORE_LIB}_static
   EXPORT MazeBuilderLibrary
   ARCHIVE COMPONENT development
   LIBRARY COMPONENT runtime
-  #FILE_SET HEADERS COMPONENT runtime
+  FILE_SET HEADERS COMPONENT runtime
 )
 
 if (UNIX)
