--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,5 +37,12 @@ option(MAZE_BUILDER_EXAMPLES "Build ${PROJECT_NAME} examples" OFF)
 include(NoInSourceBuilds)
 
 add_subdirectory(sources)
-add_subdirectory(tests)
-add_subdirectory(examples bin)
+if(MAZE_BUILDER_DOCS)
+    add_subdirectory(docs)
+endif()
+if(MAZE_BUILDER_TESTS)
+    add_subdirectory(tests)
+endif()
+if(MAZE_BUILDER_EXAMPLES)
+    add_subdirectory(examples bin)
+endif()
