Update examples, update HTTP example to build to web

--- a/examples/CLI/CMakeLists.txt
+++ b/examples/CLI/CMakeLists.txt
@@ -1,7 +1,11 @@
 
 # Set the name of the executable
 set(EXE_NAME "mazebuildercli")
-add_executable(${EXE_NAME} main.cpp)
-target_link_libraries(${EXE_NAME} ${MAZE_BUILDER_CORE_LIB}_static)
-target_compile_features(${EXE_NAME} PRIVATE cxx_std_17)
-target_include_directories(${EXE_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
+if(EMSCRIPTEN)
+else()
+    message(INFO ": Building ${EXE_NAME} for the Desktop!")
+    add_executable(${EXE_NAME} main.cpp)
+    target_link_libraries(${EXE_NAME} ${MAZE_BUILDER_CORE_LIB}_static)
+    target_compile_features(${EXE_NAME} PRIVATE cxx_std_17)
+    target_include_directories(${EXE_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
+endif()
