Update SFML git fetch to pull my fork

--- a/examples/Http/CMakeLists.txt
+++ b/examples/Http/CMakeLists.txt
@@ -11,14 +11,15 @@ if(EMSCRIPTEN)
     FetchGitRepo(SDL https://github.com/libsdl-org/SDL.git preview-3.1.3)
 
     # Get SFML
-    set(SFML_REPO_URL "https://github.com/SFML/SFML.git")
+    include(FetchGitRepo)
+    set(SFML_REPO_URL "https://github.com/zmertens/SFML.git")
     message(INFO ": Fetching SFML from ${SFML_REPO_URL}")
-    set(SFML_BUILD_AUDIO OFF)
+    set(SFML_BUILD_AUDIO ON)
     set(SFML_BUILD_NETWORK ON)
     set(SFML_BUILD_GRAPHICS OFF)
     set(SFML_BUILD_WINDOW OFF)
     set(SFML_USE_SYSTEM_DEPS OFF)
-    FetchGitRepo(SFML ${SFML_REPO_URL} 3.0.0)
+    FetchGitRepo(SFML ${SFML_REPO_URL} almostv3)
 
     target_link_libraries(${HTTP_EXE} PRIVATE ${MAZE_BUILDER_CORE_LIB}_static sfml-network SDL3::SDL3)
     target_include_directories(${HTTP_EXE} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../deps/emscripten_local)
@@ -41,12 +42,12 @@ else()
     target_compile_features(${HTTP_EXE} PRIVATE cxx_std_17)
 
     # Get SFML from the web
-    find_package(SFML 3.0.0 COMPONENTS network)
+    # Leave out find_package until official EMSDK support is added
+    # find_package(SFML 3.0.0 COMPONENTS network)
     if(NOT SFML_FOUND)
-        include(FetchGitRepo)
         set(SFML_REPO_URL "https://github.com/SFML/SFML.git")
         message(INFO ": Fetching SFML from ${SFML_REPO_URL}")
-        set(SFML_BUILD_AUDIO ON)
+        set(SFML_BUILD_AUDIO OFF)
         set(SFML_BUILD_NETWORK ON)
         set(SFML_BUILD_GRAPHICS OFF)
         set(SFML_BUILD_WINDOW OFF)
