--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.3...3.5)
+cmake_minimum_required(VERSION 3.1...3.5)
 
 # Generators using Ninja can tell if the build files are generated as a side effect of running the command, which can help avoid unnecessary rebuilds.
 cmake_policy(SET CMP0058 NEW)
@@ -32,6 +32,7 @@ set(MAZE_BUILDER_CORE_LIB "mazebuildercore")
 option(MAZE_BUILDER_DOCS "Build ${PROJECT_NAME} documentation" OFF)
 option(MAZE_BUILDER_TESTS "Build ${PROJECT_NAME} with tests" OFF)
 option(MAZE_BUILDER_COVERAGE "Build ${PROJECT_NAME} with code coverage" OFF)
+option(MAZE_BUILDER_MEMCHECK "Build ${PROJECT_NAME} with memory analysis" OFF)
 option(MAZE_BUILDER_EXAMPLES "Build ${PROJECT_NAME} examples" OFF)
 
 include(NoInSourceBuilds)
